--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.santhoshn.spotifystreamer" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -31,6 +31,7 @@
             android:name=".PlayerActivity"
             android:label="@string/title_activity_player" >
         </activity>
+        <service android:name=".service.MediaPlayerService" />
     </application>
 
 </manifest>
