--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".TopTenTracksActivity"
+            android:name=".TopTracksActivity"
             android:label="@string/title_activity_top_ten_tracks"
             android:parentActivityName=".MainActivity" >
             <meta-data
